# mnist-number-recognizer

./: pyproject.toml
docs/: definition.md  model.md  week1.md  week2.md  week3.md
src/: model.py  utils.py
